--- a/atividade2.html
+++ b/atividade2.html
@@ -7,16 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="atividade2.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Hurricane&family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hurricane&display=swap" rel="stylesheet">
 
     <title>Meu blog</title>
 </head>
 
 <body>
 
-    <footer>
-        <h1>Meu blog esportivo</h1>
+    <footer >
+        <h1 class="cabecalho">Meu blog esportivo</h1>
     </footer>
     <br>
     <hr>
@@ -57,10 +58,12 @@
             </article>
 
             <article>
-                <h1>Copa do mundo 2022</h1>
+                <h1>Copa do Mundo 2022</h1>
                 <br>
-                <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/e/e3/2022_FIFA_World_Cup.svg/200px-2022_FIFA_World_Cup.svg.png"
-                    alt="">
+                <div>
+                    <img src="https://upload.wikimedia.org/wikipedia/pt/thumb/e/e3/2022_FIFA_World_Cup.svg/200px-2022_FIFA_World_Cup.svg.png"
+                        alt="">
+                </div>
                 <br>
                 <p>A Copa do Mundo FIFA de 2022 ou Campeonato Mundial de Futebol FIFA de 2022 será a vigésima segunda
                     edição deste evento esportivo,
@@ -74,6 +77,7 @@
                     já que a competição terá uma mudança no formato e número de equipes na edição de 2026, onde será
                     sediado no Canadá,
                     Estados Unidos e México, passando para 48 equipes.</p>
+
             </article>
             <article>
                 <h1>Grupos da Copa</h1>
@@ -95,7 +99,8 @@
                 <form action="https://www.mercadolivre.com.br/">
                     <h1>Pesquise no Mercado Livre</h1>
                     <br>
-                    <input type="text" name="conteudo">
+                    <input type="text" name="as_word">
+                    <br>
                     <br>
                     <input type="submit" value="buscar">
                 </form>
@@ -108,5 +113,4 @@
         <h4>Meu blog, todos os direitos reservados</h4>
     </header>
 </body>
-
 </html>
