--- a/teste.html
+++ b/teste.html
@@ -8,15 +8,23 @@
     <script src='script.js'></script>
 </head>
 
-<body  onclick="configurarPagina()">
-    <a href="#" id="link1">Clique aqui</a>
-    <br>
-    <a href="#" id="link2">Clique aqui novamente</a>
-    <br>
-    <a href="#" id="link3">Clique aqui para escrever abaixo:</a>
-    <br>
+<body  onload="configurarPagina()">
+    <a href="#" id="link1">Clique aqui</a><br>
+
+    <a href="#" id="link2">Clique aqui novamente</a><br>
+
+    <a href="#" id="link3">Clique aqui para escrever abaixo:</a><br>
+
     <div id="resultado"></div>
     <a href="#" id="link4">Clique aqui para limpar</a>
 
+    <h1>Soma dois  números</h1>
+    <p>Número !:</p>
+    <input type="text" name="primeiro  numero" id="n1">
+    <br>
+    <p>Número 1</p>
+    <input type="text" name="segundo numero" id="n2"><br>
+    <p>resposta</p><br>
+    <button type="button" id="soma">Soma</button>
 </body>
 </html>
