--- a/atividade_banco.html
+++ b/atividade_banco.html
@@ -19,14 +19,14 @@
     <input type="text" id="valor_deposito">
     <br>
     <br>
-    <input type="submit" value="Depositar" id="depositar" onClick=depositar()>
+    <input type="submit" value="Depositar" id="depositar" onClick="depositar()">
     <br>
     <br>
     <label>Realizar saque: </label><br>
     <br>
     <input type="text" id="valor_saque"><br>
     <br>
-    <input type="submit" value="Sacar onClick=sacar()" id="sacar">
+    <input type="submit" value="Sacar onClick="sacar()" id="sacar">
 
 
 </body>
