--- a/atividade_banco.html
+++ b/atividade_banco.html
@@ -10,8 +10,8 @@
     <header>
         <h1>Banco dos alunos - IFPI</h1>
     </header>
-    <h3  id="saldo"></h3><br>
-    <h3  id="estado"></h3><br>
+    <label  id="saldo"></label><br>
+    <label  id="estado"></label><br>
 
     <label>Realizar depósito: </label>
     <br>
@@ -19,14 +19,14 @@
     <input type="text" id="valor_deposito">
     <br>
     <br>
-    <input type="submit" value="Depositar" id="depositar" onclick="depositar()">
+    <input type="submit" value="Depositar" id="depositar">
     <br>
     <br>
     <label>Realizar saque: </label><br>
     <br>
     <input type="text" id="valor_saque"><br>
     <br>
-    <input type="submit" value="Sacar" onclick= "sacar()" id="sacar">
+    <input type="submit" value="Sacar" id="sacar">
 
 
 </body>
